<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.sxp.androidsxp.MainActivity">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal"
        android:text="@string/texte_hello"
        android:textColor="@color/colorBlueTheme"
        android:textSize="22sp"
        android:id="@+id/activity_main_title"
        android:textStyle="normal|bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:id="@+id/activity_main_author3"
        android:text="@string/romain"
        android:textColor="@color/colorBlack"
        android:textSize="22sp"
        android:layout_below="@+id/activity_main_author2"
        android:layout_alignLeft="@+id/activity_main_author2"
        android:layout_alignStart="@+id/activity_main_author2"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:id="@+id/activity_main_author4"
        android:text="@string/remi"
        android:textColor="@color/colorBlack"
        android:textSize="22sp"
        android:layout_below="@+id/activity_main_author3"
        android:layout_alignRight="@+id/activity_main_author1"
        android:layout_alignEnd="@+id/activity_main_author1"
        android:layout_alignLeft="@+id/activity_main_author3"
        android:layout_alignStart="@+id/activity_main_author3"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:id="@+id/activity_main_author2"
        android:text="@string/jeff"
        android:textColor="@color/colorBlack"
        android:textSize="22sp"
        android:layout_below="@+id/activity_main_author1"
        android:layout_alignRight="@+id/activity_main_author1"
        android:layout_alignEnd="@+id/activity_main_author1"
        android:layout_alignLeft="@+id/activity_main_author1"
        android:layout_alignStart="@+id/activity_main_author1"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:id="@+id/activity_main_author1"
        android:text="@string/thomas"
        android:textColor="@color/colorBlack"
        android:textSize="22sp"
        android:layout_below="@+id/activity_main_title"
        android:layout_centerHorizontal="true"
        android:textAlignment="center" />

    <Button
        android:text="@string/button_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_main_aboutButton"
        android:background="@color/colorBlueTheme2"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:text="@string/button_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/activity_main_startButton"
        android:background="@color/colorBlueTheme2"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_above="@+id/activity_main_aboutButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="13dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
