<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="28dp"
        android:gravity="center_horizontal"
        android:text="@string/about_title"
        android:textColor="@color/colorBlueTheme"
        android:textSize="22sp"
        android:id="@+id/activity_about_title"
        android:textStyle="normal|bold" />

    <TextView
        android:text="@string/about_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:id="@+id/activity_about_description"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textColor="@color/colorBlack" />

    <Button
        android:text="@string/button_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/activity_about_backButton"
        android:background="@color/colorBlueTheme2"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:layout_marginTop="40dp"/>
</LinearLayout>